# aprilcam

./: .aprilcam  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.clasi/: .clasi.db
.clasi/architecture/: architecture-update-010.md  architecture-update-011.md  architecture-update-012.md  architecture-update-014.md
.clasi/issues/: fix-orientation-convention-to-industry-standard-enu-math-angles.md  live-tag-detection-and-systemd-persistence-on-a-pi-with-a-calibrated-playfield.md  move-residual-mcp-vision-calibration-compositing-to-daemon.md  plan-daemon-runs-on-a-remote-raspberry-pi-every-client-discovers-it-and-connects-over-tcp.md  plan-fhs-xdg-directory-layout-etc-config-sourcing-self-documenting-help-and-agent.md  plan-named-persistent-playfields-as-the-single-source-of-truth.md  plan-ros-2-bridge-for-the-aprilcam-daemon.md  plan-split-client-vs-daemon-dependencies.md
.claude/: settings.json
.claude/rules/: project-overview.md
.github/workflows/: notify-docs-hub.yml
config/: dotconfig.yaml
data/aprilcam/: hosts.json
deploy/: README.md  aprilcamd.service  provision-pi.sh
docs/knowledge/: raspberry-pi-camera-setup.md
docs/wiki/: _subsystem.yml  daemon-interface.md  daemon.md  index.md  lighting-and-detection.md  mcp-server.md  overview.md  robot-direct-api.md
proto/: aprilcam.proto
scripts/: setup-vidar-cameras.sh
src/aprilcam/: AGENT_GUIDE.md  ROBOT_API_GUIDE.md  __init__.py  config.py  (+4 more)
tests/: conftest.py  test_014_007_tcp_streaming_cli_tags.py  test_015_001_get_objects_rpc.py  test_015_003_mcp_tag_tools_daemon.py  test_015_004_web_server.py  test_015_005_view_cli_pillow.py  test_015_006_packaging_opencv_free.py  test_015_opencv_free_clients.py  test_calibrate_from_def.py  test_calibration_geometry_persist.py  test_calibration_parallax.py  test_camera_config.py  test_camera_enum_selection.py  test_cameras_cli.py  test_cli_agent.py  test_cli_dispatch.py  test_client_models.py  test_config_calibration_split.py  test_config_cli.py  test_config_fhs_xdg.py  test_config_loader.py  test_connect_daemon.py  test_daemon_control.py  test_daemon_idle_gating.py  test_daemon_protocol.py  test_daemon_server.py  test_daemon_spawn_race.py  test_daemon_stream.py  test_deskew_geometry.py  test_discovery.py  test_display_overlay.py  test_draw_paths.py  test_enumerate_cameras_proto.py  test_file_proxy_rpcs.py  test_get_playfield_tools.py  test_grpc_reflection.py  test_grpc_servicer.py  test_grpc_smoke.py  test_host_codes.py  test_invariants_014.py  (+27 more)
(+173 files in other folders)
