[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aprilcam"
version = "0.20260613.1"
description = "MCP server and CLI for camera management, AprilTag/ArUco detection, playfield homography, and image processing"
authors = [
  { name = "Eric Busboom" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["opencv", "apriltag", "aruco", "camera", "computer-vision", "mcp", "robotics", "homography", "fiducial"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base dependencies: lightweight gRPC client stack only.
# Heavy server/vision deps go in the optional extras below.
dependencies = [
  "grpcio>=1.60",
  "protobuf>=4.25",
  "pydantic>=2.0",
  "numpy>=1.23",
  "python-dotenv>=1.0",
  "rich>=13.0",
]

[project.urls]
Repository = "https://github.com/Busboombot/aprilcam"

[project.scripts]
aprilcam = "aprilcam.cli:main"

[project.optional-dependencies]
imaging = ["opencv-contrib-python>=4.8"]
daemon = [
  "aprilcam[imaging]",
  "mss>=9.0",
  "mcp>=1.0",
  "websockets>=12.0",
  "fpdf2>=2.7",
  "cv2-enumerate-cameras>=1.3",
  "msgpack>=1.0",
  "pillow>=10.0",
  "grpcio-reflection>=1.60",
  "zeroconf>=0.131",
]
dev = [
  "ipykernel>=7.2.0",
  "ipython>=8.39.0",
  "jupyter>=1.1.1",
  "anthropic>=0.104.0",
  "grpcio-tools>=1.60",
]
playfield = ["pygame>=2.5"]

[tool.uv]
# uv works with standard pyproject; this section is optional and can hold uv-specific settings later.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aprilcam = ["AGENT_GUIDE.md", "ROBOT_API_GUIDE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "anthropic>=0.104.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]
